--- a/history/history.txt
+++ b/history/history.txt
@@ -1,7 +1,17 @@
-==== Sat 08/02/2025 15:51:34.78 - Open from configs\study.txt ==== 
+==== Sat 08/02/2025 16:20:11.81 - Open from configs\study.txt ==== 
 [Default ] Github Code Repo - https://github.com  
 [Default ] ChatGPT Assistant - https://chatgpt.com  
 [Default ]  - https://pomofocus.io 
 [Profile 1 ] Notion arm-cortex-m3m4 Notes - https://www.notion.so/huyphann155/arm-cortex-m3m4-238f5b92155e8066a1ddd112e84b9f9f  
 [Profile 1 ] Udemy arm-cortex Course - https://www.udemy.com/course/embedded-system-programming-on-arm-cortex-m3m4/learn/lecture/9079534#overview  
+ 
+==== Sat 08/02/2025 16:29:52.49 - Open from configs\study.txt ==== 
+[Default ] Github Code Repo - https://github.com  
+[Default ] ChatGPT Assistant - https://chatgpt.com  
+[Default ]  - https://pomofocus.io 
+[Profile 1 ] Notion arm-cortex-m3m4 Notes - https://www.notion.so/huyphann155/arm-cortex-m3m4-238f5b92155e8066a1ddd112e84b9f9f  
+[Profile 1 ] Udemy arm-cortex Course - https://www.udemy.com/course/embedded-system-programming-on-arm-cortex-m3m4/learn/lecture/9079534#overview  
+ 
+==== Sat 08/02/2025 16:30:50.22 - Open from configs\work.txt ==== 
+[Default ] Github Code Repo - https://github.com  
  
