LinkUp - Updated version 1.1.1
-  pomodoro mode : auto start

--- a/history/history.txt
+++ b/history/history.txt
@@ -73,3 +73,6 @@
 ==== Mon 08/04/2025 22:00:54.86 - Open from configs\work.txt ==== 
 [Default ] Github Code Repo - https://github.com  
  
+==== Mon 08/04/2025 22:08:42.28 - Open from configs\work.txt ==== 
+[Default ] Github Code Repo - https://github.com  
+ 
