LinkUp - Updated version 1.1.1
 - Countdown before launch

--- a/history/history.txt
+++ b/history/history.txt
@@ -96,3 +96,12 @@
 ==== Mon 08/04/2025 22:24:22.37 - Open from configs\work.txt ==== 
 [Default ] Github Code Repo - https://github.com  
  
+==== Mon 08/04/2025 22:29:30.43 - Open from configs\work.txt ==== 
+[Default ] Github Code Repo - https://github.com  
+ 
+==== Mon 08/04/2025 22:30:02.55 - Open from configs\work.txt ==== 
+[Default ] Github Code Repo - https://github.com  
+ 
+==== Mon 08/04/2025 22:37:24.55 - Open from configs\work.txt ==== 
+[Default ] Github Code Repo - https://github.com  
+ 
